Updating Environment Variables

--- a/functions-sfr/.env.sample
+++ b/functions-sfr/.env.sample
@@ -7,4 +7,4 @@ VIDEO_WORKFLOW_SID=WW********************************
 SYNC_SERVICE_SID=IS********************************
 RECORD_PARTICIPANT_ON_CONNECT=true
 ROOM_TYPE=group
-AWS_API_URL=https://zok3papu2d.execute-api.us-east-1.amazonaws.com/dev/call-recording
+AWS_API_GATEWAY_URL=https://
